# DAS4Whales

./: .gitignore  .readthedocs.yaml  DAS4Whales_ExampleNotebook.ipynb  DAS4Whales_ExampleNotebook.md  Example.py  FullProcessKDE.txt  HOUSEKEEPING_SUMMARY.md  HowTo_VirtualEnvironements.txt  README.md  analyze_test_results.py  enhanced_localization_example.py  enhanced_localization_test_results.csv  localization_results_with_uncertainty.csv  noxfile.py  plot_localization_map.py  pyproject.toml  requirements.txt  setup.py  test_enhanced_tracking.py
.github/: build-docs.yml
.github/workflows/: ci.yml  publish.yml
Annotate/: annotate.ipynb  annotate.py  annotated_calls_north.csv  annotated_calls_north_2021-11-03_22:11:22.csv  annotated_calls_north_2021-11-04_02:04:12.csv  annotated_calls_north_2021-11-04_02:05:02.csv  annotated_calls_south.csv  annotated_calls_south_2021-11-04_02:00:02.csv
Annotate/ASA25/: annotated_calls_north_2021-11-04_02:00:02.csv  annotated_calls_north_2021-11-04_02:00:52.csv  annotated_calls_north_2021-11-04_02:01:42.csv  annotated_calls_north_2021-11-04_02:02:32.csv  annotated_calls_north_2021-11-04_02:03:22.csv  annotated_calls_south_2021-11-04_02:00:52.csv  annotated_calls_south_2021-11-04_02:01:42.csv  annotated_calls_south_2021-11-04_02:02:32.csv  annotated_calls_south_2021-11-04_02:03:22.csv  annotated_calls_south_2021-11-04_02:04:12.csv  annotated_calls_south_2021-11-04_02:05:02.csv
Annotate/Batch1/: annotated_calls_north_2021-11-04_02:00:02.csv  annotated_calls_north_2021-11-04_02:00:52.csv  annotated_calls_north_2021-11-04_02:01:42.csv  annotated_calls_north_2021-11-04_02:02:32.csv  annotated_calls_north_2021-11-04_02:03:22.csv  annotated_calls_north_2021-11-04_02:04:12.csv  annotated_calls_north_2021-11-04_02:05:02.csv  annotated_calls_north_2021-11-04_02:05:52.csv  annotated_calls_north_2021-11-04_02:06:42.csv  annotated_calls_north_2021-11-04_02:07:32.csv  (+14 more)
das4whales/: __init__.py  das4whales.py  das_data.py  dask_wrap.py  data_handle.py  detect.py  dsp.py  plot.py  preprocess.py  tools.py  transform.py
devnotebooks/: Evaluate.py  NS_crosscorr.py  all_localizations_with_coords.csv  assoc_heatmap.py  batch1_localizations_with_coords.csv  batch2_localizations_with_coords.csv  batch3_localizations_with_coords.csv  batch4_localizations_with_coords.csv  batch4gabor_localizations_with_coords.csv  batch5_localizations_with_coords.csv  evaluate.py  faintassoc_bicable_cleaner.py  faintassoc_bicable_iter1.py  faintassoc_bicable_windows.py  localization_results.csv  map_plot.py  par_fft.py  tracks.py  tracks_12h.py  tracks_animate.py  tracks_fromlocs.py  tracks_fromlocs_stats.py
docs/: conf.py  dsp.rst  graph.rst  index.md
docs/_static/: custom.css
scripts/: generate_file_list.py  main_assoc-loc.py  main_bathynoise.py  main_fkcomp.py  main_gabordetect.py  main_mfdetect.py  main_mfdetection.py  main_plots.py  main_spectrodetect.py  main_timepicking.py
test/: test_detect.py
tests/: test_asn_fix.py  test_assoc.py  test_data_handle.py  test_detect.py  test_dsp.py  test_loc.py  test_plot.py  test_spatial.py  test_tools.py
(+177 files in other folders)
