[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "das4whales"
dynamic = ["version"]
description = "Distributed acoustic sensing analysis tools for Bioacoustics"
readme = "README.md"
license.file = "LICENSE"
authors = [
    { name = "Léa Bouffaut", email = "lea.bouffaut@cornell.edu" },
    { name = "Quentin Goestchel", email = "qgoestch@uw.edu"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "DateTime",
    "h5py",
    "librosa",
    "matplotlib",
    "numpy",
    "scipy",
    "wget",
    "dask[complete]",
    "sparse",
    "pytest",
    "xarray",
    "tqdm",
    "torch",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/leabouffaut/DAS4Whales"

[tool.hatch.version]
path = "src/das4whales/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/das4whales/",
]

